// Backport seam S3 (docs/backport-plan.md §8): fabric datagen consumes this module on every MC
// version, down to 1.20.1 (Java 17), so it stays one shared source. The toolchain (21, from the
// root tools/* block) is unchanged; --release pins the language level and API.
tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

dependencies {
    api 'com.google.code.gson:gson:2.11.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Use JUnit Platform for unit tests
tasks.withType(Test).configureEach {
    useJUnitPlatform()

    // This module's suite is a handful of @TestFactory methods that each expand into thousands of
    // dynamic tests (one per shape/permutation), so logging every pass would flood the console —
    // log failures with full detail, and print one summary line so a run is still visible even
    // when everything passes.
    testLogging {
        events "failed"
        exceptionFormat = "full"
    }
    afterSuite { desc, result ->
        if (!desc.parent) {
            println "\nTest result: ${result.resultType} — ${result.testCount} tests, " +
                    "${result.successfulTestCount} passed, ${result.failedTestCount} failed, " +
                    "${result.skippedTestCount} skipped"
        }
    }
}
